h2. 1.0.0

Deprecated

* extract_tag
* extract_tags
* extract_hash

All solrize and extract methods now accept and return a _Hash_ rather than a Solr::Document
Removed dependency on outdated "solr" gem, replaced it with RSolr

h2. 0.3.1

fix in require statements

h2. 0.3.0

HYDRA-286 Re-structure Solrizer to separate solrizer base from fedora-solrizer 

Added TerminologyBasedSolrizer
Added Extremely Configurable FieldMapper
Updated FieldNameMapper to use new FieldMapper

h2. 0.1.2

Minor: switched active-fedora gem requirement to >= 1.1.5 instead of = 1.1.5 (was breaking apps that use later versions of active-fedora)